# stretch-rearrangement

./: .gitignore  README.md
src/exploration_rearrangement/: package.xml  setup.cfg  setup.py
src/exploration_rearrangement/assets/: stretch.urdf  stretch_ik.urdf
src/exploration_rearrangement/config/: nav2_params.yaml  objects.yaml  planner_test_scenarios.yaml  regions.yaml  slam_params.yaml  tasks.yaml
src/exploration_rearrangement/docs/: INTEGRATION_RUNBOOK.md  INTERFACES.md  INTERFACES_CN.md  README.md  RUNBOOK.md  VISUAL_GRASP_RUNBOOK.md  navigation_module.md
src/exploration_rearrangement/exploration_rearrangement/: exploration_node.py  fine_object_detector_node.py  head_scan_node.py  manipulation_node.py  navigation_node.py  object_detector_node.py  region_manager_node.py  set_up_yolo_e.py  task_executor_node.py  task_planner_node.py  visual_grasp_node.py  visual_servo_arm_node.py
src/exploration_rearrangement/exploration_rearrangement/manipulation/: detection_utils.py  grasp_objects.py  ik_ros_utils.py  object_detector.py  object_detector_pcd.py  object_queries.yaml  target_following.py  urdf_utils.py  visual_grasp_node.py
src/exploration_rearrangement/exploration_rearrangement/planners/: __init__.py  base.py  greedy.py  vlm.py
src/exploration_rearrangement/exploration_rearrangement/sim/: fake_planner_inputs.py  fake_sim_node.py
src/exploration_rearrangement/exploration_rearrangement/utils/: color_segmentation.py  depth_projection.py  frontier_utils.py  transform_utils.py
src/exploration_rearrangement/launch/: bringup.launch.py  detector_debug.launch.py  mapping.launch.py  pick.launch.py  rearrangement.launch.py  sim.launch.py  visual_grasp.launch.py
src/exploration_rearrangement/maps/: asangium.pgm  asangium.yaml
src/exploration_rearrangement/rviz/: detector_debug.rviz  rearrangement.rviz
src/exploration_rearrangement/test/: README.md  README_CN.md  test_e2e_sim.py  test_exploration.py  test_head_scan.py  test_integration.py  test_manipulation.py  test_navigation.py  test_object_detector.py  test_planners.py  test_region_manager.py  test_task_executor.py  test_task_planner.py  test_utils.py
