<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exploration_rearrangement</name>
  <version>0.1.0</version>
  <description>
    Autonomous Exploration-Driven Object Rearrangement for the Hello Robot Stretch 3.
    Frontier-based exploration, RGB-D object detection, region-aware task planning
    (greedy baseline + Gemini VLM), and Nav2 + Stretch manipulation execution.
  </description>
  <maintainer email="haokunz@andrew.cmu.edu">Haokun Zhu</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
